--- a/Cube 2/pom.xml
+++ b/Cube 2/pom.xml
@@ -16,6 +16,14 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>jcenter</id>
+			<url>https://jcenter.bintray.com</url>
+			<name>jcenter-bintray</name>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -23,8 +31,13 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>club.minnced</groupId>
+			<artifactId>java-discord-rpc</artifactId>
+			<version>2.0.1</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
