--- a/Cube 2/pom.xml
+++ b/Cube 2/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.torpill.game</groupId>
-	<artifactId>Game</artifactId>
+	<artifactId>Cube-2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
