--- a/Cube 2/pom.xml
+++ b/Cube 2/pom.xml
@@ -36,6 +36,16 @@
 			<artifactId>java-discord-rpc</artifactId>
 			<version>2.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>28.0-jre</version>
+		</dependency>
 	</dependencies>
 
 	<build>
